tests/ui/cast/cast-char.stderr
error: only `u8` can be cast into `char`
  --> $DIR/cast-char.rs:4:23
   |
LL |     const XYZ: char = 0x1F888 as char;
   |                       ^^^^^^^^^^^^^^^ help: use a `char` literal instead: `'\u{1F888}'`
   |
note: the lint level is defined here
  --> $DIR/cast-char.rs:1:9
   |
LL | #![deny(overflowing_literals)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: only `u8` can be cast into `char`
  --> $DIR/cast-char.rs:6:22
   |
LL |     const XY: char = 129160 as char;
   |                      ^^^^^^^^^^^^^^ help: use a `char` literal instead: `'\u{1F888}'`

error: aborting due to 2 previous errors

